glpk-4.6/contrib/deli/Glpk4.PAS


{* void lpx_set_prob_name(LPX *lp, char *name); *}
{* assign (change) problem name *}
Procedure lpx_set_prob_name(lp : PLPX; name : String);
cdecl; external 'glpk-4.dll' index 264;

{* void lpx_set_real_parm(LPX *lp, int parm, double val); *}
{* set (change) real control parameter *}
Procedure lpx_set_real_parm(lp : PLPX; parm : Integer; val : Double);
cdecl; external 'glpk-4.dll' index 265;

{* void lpx_set_row_bnds(LPX *lp, int i, int typx, double lb, double ub); *}
{* set (change) row bounds *}
Procedure lpx_set_row_bnds(lp : PLPX; i : Integer; typx : Integer; lb : Double; ub : Double);
cdecl; external 'glpk-4.dll' index 266;

{* void lpx_set_row_coef(LPX *lp, int i, double coef); *}
{* set (change) row objective coefficient *}
Procedure lpx_set_row_coef(lp : PLPX; i : Integer; coef : Double);
cdecl; external 'glpk-4.dll' index 267;

{* void lpx_set_row_name(LPX *lp, int i, char *name); *}
{* assign (change) row name *}
Procedure lpx_set_row_name(lp : PLPX; i : Integer; name : String);
cdecl; external 'glpk-4.dll' index 268;

{* void lpx_set_row_stat(LPX *lp, int i, int stat); *}
{* set (change) row status *}
Procedure lpx_set_row_stat(lp : PLPX; i : Integer; stat : Integer);
cdecl; external 'glpk-4.dll' index 269;

{* int lpx_simplex(LPX *lp); *}
{* easy-to-use driver to the simplex method *}
Function lpx_simplex(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 270;

{* void lpx_std_basis(LPX *lp); *}
{* build standard initial basis *}
Procedure lpx_std_basis(lp : PLPX);
cdecl; external 'glpk-4.dll' index 271;

{* int lpx_transform_col(LPX *lp, int len, int ndx[], double val[]); *}
{* transform explicitly specified column *}
Function lpx_transform_col(lp : PLPX; len : Integer; ndx : PIntArray; val : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 272;

{* int lpx_transform_row(LPX *lp, int len, int ndx[], double val[]); *}
{* transform explicitly specified row *}
Function lpx_transform_row(lp : PLPX; len : Integer; ndx : PIntArray; val : PFloatArray):Integer;
cdecl; external 'glpk-4.dll' index 273;

{* void lpx_unmark_all(LPX *lp); *}
{* unmark all rows and columns *}
Procedure lpx_unmark_all(lp : PLPX);
cdecl; external 'glpk-4.dll' index 274;

{* void lpx_unscale_prob(LPX *lp); *}
{* unscale LP problem data *}
Procedure lpx_unscale_prob(lp : PLPX);
cdecl; external 'glpk-4.dll' index 275;

{* int lpx_warm_up(LPX *lp); *}
{* "warm up" the initial basis *}
Function lpx_warm_up(lp : PLPX):Integer;
cdecl; external 'glpk-4.dll' index 276;

{* int lpx_write_bas(LPX *lp, char *fname); *}
{* write current basis using MPS format *}
Function lpx_write_bas(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 277;

{* int lpx_write_lpt(LPX *lp, char *fname); *}
{* write problem data using CPLEX LP format *}
Function lpx_write_lpt(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 278;

{* int lpx_write_mps(LPX *lp, char *fname); *}
{* write problem data using MPS format *}
Function lpx_write_mps(lp : PLPX; fname : String):Integer;
cdecl; external 'glpk-4.dll' index 279;

Function PutZTString( S : String): String;


Implementation


{* Put Zero Terminated String  to DLL *}
Function PutZTString( S : String): String;

 Begin
   PutZTString := S + Chr(0);
 End;



End.
